@@ -112,7 +112,7 @@ endif()
 #---------------------------------------------------------------------------------------------------
 include(CMakeParseArguments)
 
-find_package(PythonInterp)
+find_package(PythonInterp QUIET)
 
 #-------------------------------------------------------------------------------
 # elements_project(project version
@@ -357,14 +357,14 @@ macro(elements_project project version)
 
   if(PYTHONINTERP_FOUND)
     if(USE_PYTHON_NOSE)
-      find_package(Nose)
+      find_package(Nose QUIET)
       if(NOSE_FOUND)
         message(STATUS "Using the Nose python test framework")
         set(PYFRMK_TEST ${NOSE_EXECUTABLE})
         set(PYFRMK_NAME "PythonNose")
       else()
         message(WARNING "The Nose python test framework cannot be found")
-        find_package(PyTest)
+        find_package(PyTest QUIET)
         if(PYTEST_FOUND)
           message(WARNING "Using Py.Test instead")
           set(PYFRMK_TEST ${PYTEST_EXECUTABLE})
@@ -372,14 +372,14 @@ macro(elements_project project version)
         endif()
       endif()
     else()
-      find_package(PyTest)
+      find_package(PyTest QUIET)
       if(PYTEST_FOUND)
         message(STATUS "Using the Py.Test python test framework")
         set(PYFRMK_TEST ${PYTEST_EXECUTABLE})
         set(PYFRMK_NAME "PyTest")
       else()
         message(WARNING "The Py.Test python test framework cannot be found")
-        find_package(Nose)
+        find_package(Nose QUIET)
         if(NOSE_FOUND)
           message(WARNING "Using Nose instead")
           set(PYFRMK_TEST ${NOSE_EXECUTABLE})
@@ -793,10 +793,10 @@ macro(elements_project project version)
 
   include(CPack)
 
-  find_package(Tar)
+  find_package(Tar QUIET)
   if(TAR_FOUND)
 
-    find_package(RPMBuild)
+    find_package(RPMBuild QUIET)
 
     if (RPMBUILD_FOUND)
       option(USE_DEFAULT_RPMBUILD_DIR "Use default RPM build directory (the value of the %_topdir variable)" OFF)
@@ -868,7 +868,7 @@ macro(elements_project project version)
   endif()
 
   # Add Doxygen generation
-  find_package(Doxygen)
+  find_package(Doxygen QUIET)
   if(DOXYGEN_FOUND)
     find_file(doxygen_file_template
               NAMES Doxyfile.in
@@ -988,11 +988,11 @@ macro(_elements_use_other_projects)
         if(${other_project}_FOUND)
           break()
         else()
-          set(suffixes)
-          get_installed_versionless_project_suffixes(${other_project} ${BINARY_TAG} ${SGS_SYSTEM} suffixes)
+          set(suffixes2)
+          get_installed_versionless_project_suffixes(${other_project} ${BINARY_TAG} ${SGS_SYSTEM} suffixes2)
           find_package(${other_project} ${other_project_cmake_version} QUIET
                        HINTS ${pth}
-                       PATH_SUFFIXES ${suffixes})
+                       PATH_SUFFIXES ${suffixes2})
           if(${other_project}_FOUND)
             break()
           endif()
@@ -1985,12 +1985,102 @@ function(elements_add_python_module module)
 
   include_directories(${PYTHON_INCLUDE_DIRS})
   add_library(${module} MODULE ${srcs})
-  set_target_properties(${module} PROPERTIES SUFFIX .so PREFIX "")
+  set_target_properties(${module} PROPERTIES SUFFIX .so PREFIX "_")
   target_link_libraries(${module} ${PYTHON_LIBRARIES} ${ARG_LINK_LIBRARIES})
+#  _elements_detach_debinfo(${module})
 
   #----Installation details-------------------------------------------------------
   install(TARGETS ${module} LIBRARY DESTINATION python/lib-dynload OPTIONAL)
   set_property(GLOBAL APPEND PROPERTY PROJ_HAS_PYTHON TRUE)
+endfunction()
+
+#---------------------------------------------------------------------------------------------------
+# elements_add_swig_binding(<name>
+#                           [interface] source1 source2 ...
+#                           LINK_LIBRARIES library1 library2 ...
+#                           INCLUDE_DIRS dir1 package2 ...
+#                           [NO_PUBLIC_HEADERS | PUBLIC_HEADERS dir1 dir2 ...])
+#
+# Create a SWIG binary python module from the specified sources (glob patterns are allowed), linking
+# it with the libraries specified and adding the include directories to the search path. The sources
+# can be either *.i or *.cpp files. Their location is relative to the base of the Elements package 
+# (module).
+#---------------------------------------------------------------------------------------------------
+function(elements_add_swig_binding binding)
+
+  find_package(SWIG QUIET REQUIRED)
+  find_package(PythonLibs QUIET REQUIRED)
+  
+  # this function uses an extra option: 'PUBLIC_HEADERS'
+  CMAKE_PARSE_ARGUMENTS(ARG "NO_PUBLIC_HEADERS" "" "LIBRARIES;LINK_LIBRARIES;INCLUDE_DIRS;PUBLIC_HEADERS" ${ARGN})
+  
+  set(MODULE_ARG_LINK_LIBRARIES ${ARG_LINK_LIBRARIES})
+  set(MODULE_ARG_INCLUDE_DIRS ${ARG_INCLUDE_DIRS})
+  
+  
+  elements_common_add_build(${ARG_UNPARSED_ARGUMENTS} 
+                            LIBRARIES ${ARG_LIBRARIES} 
+                            LINK_LIBRARIES ${ARG_LINK_LIBRARIES} 
+                            INCLUDE_DIRS ${ARG_INCLUDE_DIRS})
+ 
+  get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
+  list(REMOVE_DUPLICATES dirs)
+  set(SWIG_MOD_INCLUDE_DIRS)
+  foreach(dir ${dirs})
+    set(SWIG_MOD_INCLUDE_DIRS ${SWIG_MOD_INCLUDE_DIRS} -I${dir})
+  endforeach()
+   
+  if(NOT ARG_NO_PUBLIC_HEADERS AND NOT ARG_PUBLIC_HEADERS)
+    elements_get_package_name(package)
+    message(WARNING "Binding ${binding} (in ${package}) does not declare PUBLIC_HEADERS. Use the option NO_PUBLIC_HEADERS if it is intended.")
+  endif()
+    
+  # find the sources
+  elements_expand_sources(srcs ${ARG_UNPARSED_ARGUMENTS})
+  
+  set(cpp_srcs)
+  set(i_srcs)
+  foreach(s ${srcs})
+    if(s MATCHES "(.*).i")
+      list(APPEND i_srcs ${s})
+    else()
+      list(APPEND cpp_srcs ${s})
+    endif()
+  endforeach()
+ 
+  set(PY_MODULE_DIR ${CMAKE_BINARY_DIR}/python)
+  set(PY_MODULE ${binding})
+  set(PY_MODULE_SWIG_SRC ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PY_MODULE}PYTHON_wrap.cxx)
+ 
+ 
+  #SWIG command
+  add_custom_command(
+	OUTPUT
+		${PY_MODULE_DIR}/${PY_MODULE}.py
+		${PY_MODULE_SWIG_SRC}
+	COMMAND
+		${SWIG_EXECUTABLE}
+		-python
+		-module ${binding}
+		-Wextra
+		-outdir ${PY_MODULE_DIR}
+		-c++
+		${SWIG_MOD_INCLUDE_DIRS}
+		-o ${PY_MODULE_SWIG_SRC}
+		${i_srcs}
+	DEPENDS 
+		${i_srcs}
+	COMMENT "Generating SWIG binding"
+  )
+ 
+  elements_add_python_module(${binding}
+                             ${PY_MODULE_SWIG_SRC} ${cpp_srcs}
+                             LINK_LIBRARIES ${MODULE_ARG_LINK_LIBRARIES}
+                             INCLUDE_DIRS ${MODULE_ARG_INCLUDE_DIRS})
+
+  install(FILES ${PY_MODULE_DIR}/${binding}.py DESTINATION python)
+  elements_install_headers(${ARG_PUBLIC_HEADERS})
+
 endfunction()
 
 #---------------------------------------------------------------------------------------------------
@@ -2067,7 +2157,7 @@ function(elements_add_unit_test name)
 
     if(NOT ${${name}_UNIT_TEST_TYPE} STREQUAL "None")
       if (${${name}_UNIT_TEST_TYPE} STREQUAL "Boost")
-        find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+        find_package(Boost COMPONENTS unit_test_framework QUIET REQUIRED)
       else()
         find_package(${${name}_UNIT_TEST_TYPE} QUIET REQUIRED)
       endif()
@@ -2257,6 +2347,7 @@ function(elements_install_headers)
               PATTERN "*.icpp"
               PATTERN "*.hpp"
               PATTERN "*.hxx"
+              PATTERN "*.i"
               PATTERN "CVS" EXCLUDE
               PATTERN ".svn" EXCLUDE)
       if(NOT IS_ABSOLUTE ${hdr_dir})
