@@ -710,7 +710,7 @@ EXCLUDE_SYMLINKS = NO
 # against the file with absolute path, so to exclude all test directories
 # for example use the pattern */test/*
 
-EXCLUDE_PATTERNS = */tests/* @PROJECT_SOURCE_DIR@/build.* */tinfo.cc @PROJECT_SOURCE_DIR@/InstallArea/*
+EXCLUDE_PATTERNS = */tests/* */auxdir/* @PROJECT_SOURCE_DIR@/build.* */tinfo.cc @PROJECT_SOURCE_DIR@/InstallArea/*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
